--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,7 +7,7 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
-
+        <activity android:name="com.codinguser.android.contactpicker.ContactsPickerActivity"></activity>
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name">
