Improve RTL support

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,16 @@
 apply plugin: 'com.android.application'
-
 android {
+    signingConfigs {
+    }
     compileSdkVersion 22
     buildToolsVersion "22.0.1"
     defaultConfig {
         0
         applicationId "ir.silvertech.cheathelper"
         minSdkVersion 9
+        versionCode 106
         targetSdkVersion 22
-        versionCode 1
-        versionName '1.05'
+        versionName '1.06'
     }
     buildTypes {
         release {
